--- a/index.html
+++ b/index.html
@@ -227,6 +227,13 @@
             height: 4.5rem; /* 72px - увеличено в 1.5 раза от 48px */
         }
         
+        /* Mobile Header Logo - 2x larger */
+        @media (max-width: 767px) {
+            .logo-header {
+                height: 9rem; /* 144px - в 2 раза больше */
+            }
+        }
+        
         /* Instant appearance for all hero elements */
         .hero-stats, .hero-cta, .hero-badge {
             animation-delay: 0s !important;
@@ -1069,7 +1076,7 @@
                     <div class="bg-white rounded-xl p-8 shadow-lg border-l-4 border-green-500">
                         <div class="flex items-start gap-6">
                             <div class="w-16 h-16 bg-green-100 rounded-xl flex items-center justify-center flex-shrink-0">
-                                <i class="fas fa-tire text-green-600 text-2xl"></i>
+                                <i class="fas fa-tools text-green-600 text-2xl"></i>
                         </div>
                             <div>
                                 <h3 class="text-2xl font-bold mb-3 earth-text">Tire Repair</h3>
@@ -1176,11 +1183,7 @@
                                 <p class="text-gray-600 font-semibold">Google Reviews</p>
                             </div>
                         </div>
-                        <div class="h-16 w-px bg-gray-300 hidden md:block"></div>
-                    <div class="text-center">
-                            <p class="text-2xl font-bold text-gray-900 mb-2">Rated #1</p>
-                            <p class="text-gray-600">Bike Rental in Koh Phangan</p>
-                        </div>
+
                     </div>
                 </div>
 
