📱 MOBILE HEADER FIX: Removed excessive padding
🔧 BEFORE:
- Large white space above and below logo
- py-4 padding creating ~1cm margins
- Wasted mobile screen space

✅ AFTER:
- Minimal 1mm padding top/bottom
- Logo sits close to header edges
- More screen space for content
- Clean, tight mobile layout

Perfect mobile header now! 📱✨

--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
             .logo-header {
                 height: 9rem; /* 144px - в 2 раза больше */
             }
+            
+            /* Remove header padding on mobile */
+            header .max-w-7xl {
+                padding-top: 0.25rem !important; /* 1mm */
+                padding-bottom: 0.25rem !important; /* 1mm */
+            }
         }
         
         /* Instant appearance for all hero elements */
