📱 FOOTER CONTACTS: Updated real social media handles
✅ TELEGRAM: @easyridekp → @michaelkpg
✅ INSTAGRAM: @easyridekp → @Easyridekpg

🔗 Updated links:
- https://t.me/michaelkpg
- https://instagram.com/Easyridekpg

Now footer shows real contact info! 📞

--- a/index.html
+++ b/index.html
@@ -1241,11 +1241,11 @@
                             <a href="https://wa.me/79175556789" target="_blank" rel="noopener" class="flex items-center text-gray-300">
                                 <i class="fab fa-whatsapp mr-3 text-green-500"></i>+7 917 555 6789
                             </a>
-                                                    <a href="https://t.me/easyridekp" target="_blank" rel="noopener" class="flex items-center text-gray-300">
-                            <i class="fab fa-telegram mr-3 text-blue-500"></i>@easyridekp
+                            <a href="https://t.me/michaelkpg" target="_blank" rel="noopener" class="flex items-center text-gray-300">
+                                <i class="fab fa-telegram mr-3 text-blue-500"></i>@michaelkpg
                             </a>
-                        <a href="https://instagram.com/easyridekp" target="_blank" rel="noopener" class="flex items-center text-gray-300">
-                            <i class="fab fa-instagram mr-3 text-pink-500"></i>@easyridekp
+                            <a href="https://instagram.com/Easyridekpg" target="_blank" rel="noopener" class="flex items-center text-gray-300">
+                                <i class="fab fa-instagram mr-3 text-pink-500"></i>@Easyridekpg
                             </a>
                         </div>
                     </div>
